feat:connect links

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       </div>
 
       <ul class="navbar-nav d-flex flex-row nav-main">
-        <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Customers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Prouducts</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Technology</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Retailers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Blogs</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="https://35.173.217.47/">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#blogs">Blogs</a> </li>
       </ul>
       <div class="nav-btn-container">
         <button class="nav-btn">SEE LIVE IN ACTION</button>
@@ -66,12 +66,12 @@
         </div>
         <div class="padding-24 paddingx-20">
           <ul class="modal-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Customers</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Technology</a></li>
-            <li><a href="#">Retailers</a></li>
-            <li><a href="#">Blogs</a></li>
+            <li class=""><a href="https://35.173.217.47/">Home</a></li>
+            <li class=""><a href="#customers">Customers</a></li>
+            <li class=""><a href="#products">Products</a></li>
+            <li class=""><a href="#technology">Technology</a></li>
+            <li class=""><a href="#retailers">Retailers</a></li>
+            <li class=""><a href="#blogs">Blogs</a></li>
           </ul>
           <div class="modal-nav-btn-container">
             <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <div class="home-main position-relative d-flex align-items-center m-auto w-100">
+    <div class="home-main position-relative d-flex align-items-center m-auto w-100" id="home">
       <div class="d-flex flex-column w-100">
         <div class="paddingx-40 mb-2">
           <h1 class="title text-center fw-bold">
@@ -229,7 +229,7 @@
     </div>
   </div>
   </div>
-  <div class="products">
+  <div class="products" id="products">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
       <p class="title-gradient">
         How brands leverage Heystack Insights
@@ -448,8 +448,8 @@
       </div>
     </div>
   </div>
-  <div class="technology">
-    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto" id="technology">
+  <div class="technology" id="technology">
+    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
       <p class="title-gradient m-0">
         What is Unique about Heystack?
       </p>
