feat:href in logo

--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
 </head>
 
 <body>
-  <div class="home">
+  <div class="home" id="home">
     <div class="semicircle position-absolute bottom-0 start-0">
       <img src="./assets/generative/semicircle.webp" alt="" />
     </div>
 
     <div class="navbar position-relative">
-      <div class="logo d-flex align-items-center gap-2 navbar-brand">
+      <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
         <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
         <span class="">Heystack</span>
-      </div>
+      </a>
 
       <ul class="navbar-nav d-flex flex-row nav-main">
-        <li class="nav-item"> <a class="nav-link" href="https://35.173.217.47/">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="/index.html">Home</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#blogs">Blogs</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="blogs">Blogs</a> </li>
       </ul>
       <div class="nav-btn-container">
         <button class="nav-btn">SEE LIVE IN ACTION</button>
@@ -56,31 +56,31 @@
     <div class="modal">
       <div class="modal-content">
         <div class="modal-header d-flex justify-content-between">
-          <div class="logo d-flex align-items-center gap-2 navbar-brand">
+          <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
             <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
             <span class="">Heystack</span>
-          </div>
+          </a>
           <div class="close-btn modal-close">
             <span class="" style="color: rgb(143, 143, 143);"><img src="./assets/logo/close.svg" alt=""></span>
           </div>
         </div>
         <div class="padding-24 paddingx-20">
           <ul class="modal-nav">
-            <li class=""><a href="https://35.173.217.47/">Home</a></li>
+            <li class=""><a href="/index.html">Home</a></li>
             <li class=""><a href="#customers">Customers</a></li>
             <li class=""><a href="#products">Products</a></li>
             <li class=""><a href="#technology">Technology</a></li>
             <li class=""><a href="#retailers">Retailers</a></li>
-            <li class=""><a href="#blogs">Blogs</a></li>
+            <li class=""><a href="blogs.html">Blogs</a></li>
           </ul>
           <div class="modal-nav-btn-container">
-            <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
+            <button class="modal-nav-btn" >SEE LIVE IN ACTION</button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="home-main position-relative d-flex align-items-center m-auto w-100" id="home">
+    <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100">
         <div class="paddingx-40 mb-2">
           <h1 class="title text-center fw-bold">
