--- a/index.html
+++ b/index.html
@@ -636,7 +636,9 @@
     <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="">Heystack™</a>. All Rights
       Reserved.</p>
   </div>
-
+  <button id="backToTopBtn" class="back-to-top-btn">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 
 </html>
