--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="blogs">Blogs</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
       </ul>
       <div class="nav-btn-container">
         <button class="nav-btn">SEE LIVE IN ACTION</button>
@@ -65,7 +65,7 @@
             <li class=""><a href="#products">Products</a></li>
             <li class=""><a href="#technology">Technology</a></li>
             <li class=""><a href="#retailers">Retailers</a></li>
-            <li class=""><a href="blogs.html">Blogs</a></li>
+            <li class=""><a href="./blog.html">Blogs</a></li>
           </ul>
           <div class="modal-nav-btn-container">
             <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
@@ -80,7 +80,7 @@
     </div>
     <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100">
-        <div class="paddingx-40 mb-2">
+        <div class="title-box paddingx-40 mb-2">
           <h1 class="title text-center fw-bold">
             Generative AI Powered Actionable Insights for Product Experience
             Analytics
