--- a/index.html
+++ b/index.html
@@ -637,7 +637,8 @@
       Reserved.</p>
   </div>
   <button id="backToTopBtn" class="back-to-top-btn">
-    <i class="fas fa-chevron-up"></i>
+    <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
+    <p>Back to Top</p>
   </button>
 </body>
 
