--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="position-relative">
-    <div class="navbar position-absolute top-0 start-0">
+    <div class="navbar top-0 start-0">
         <div class="navbar-container">
           <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
             <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
