--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span class="">Heystack</span>
       </a>
       <ul class="navbar-nav d-flex flex-row nav-main">
-        <li class="nav-item"> <a class="nav-link" href="/index.html">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
@@ -60,7 +60,7 @@
         </div>
         <div class="padding-24 paddingx-20">
           <ul class="modal-nav">
-            <li class=""><a href="/index.html">Home</a></li>
+            <li class=""><a href="./index.html">Home</a></li>
             <li class=""><a href="#customers">Customers</a></li>
             <li class=""><a href="#products">Products</a></li>
             <li class=""><a href="#technology">Technology</a></li>
