--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 <body class="position-relative">
     <div class="navbar top-0 start-0">
         <div class="navbar-container">
-          <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+          <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
             <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
             <span class="">Heystack</span>
           </a>
@@ -51,7 +51,7 @@
         <div class="modal">
           <div class="modal-content">
             <div class="modal-header d-flex justify-content-between">
-              <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+              <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
                 <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
                 <span class="">Heystack</span>
               </a>
