--- a/blog.html
+++ b/blog.html
@@ -32,11 +32,11 @@
             <span class="">Heystack</span>
           </a>
           <ul class="navbar-nav d-flex flex-row nav-main">
-            <li class="nav-item"> <a class="nav-link" href="/index.html">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#customers">Customers</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#products">Prouducts</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#technology">Technology</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#retailers">Retailers</a> </li>
             <li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
           </ul>
           <div class="nav-btn-container">
@@ -94,7 +94,7 @@
                     <div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
                         Usher in a New Era of Footwear Innovation with Online Review Analytics
                     </div>
-                    <div style=" color: : rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
+                    <div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
                         UGG, a subsidiary of Deckers brands, made a name for itself with sheep’s wool boots. Featured on Oprah and paraded around by celebrity A-listers
                     </div>
                         <div style=" display: flex; flex-direction: row; justify-content: space-between;">
@@ -127,7 +127,7 @@
                         <div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
                             Usher in a New Era of Footwear Innovation with Online Review Analytics
                         </div>
-                        <div style=" color: : rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
+                        <div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
                             UGG, a subsidiary of Deckers brands, made a name for itself with sheep’s wool boots. Featured on Oprah and paraded around by celebrity A-listers
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
                            2023 holiday season
                         </div>
-                        <div style=" color: : rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
+                        <div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
                             The fiercely competitive landscape of Home Care, heightened by the post-pandemic focus on germ-killing products, strategic marketing is paramount.
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
                            Unraveling the Tapestry of Network Engineering: Building the Backbone of Connectivity
                         </div>
-                        <div style=" color: : rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
+                        <div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
                             In a world where connectivity is king, network engineering stands as the architect behind the scenes, weaving the intricate web
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                         <div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
                            Artificial Intelligence (AI) stands as the pinnacle of human innovation
                         </div>
-                        <div style=" color: : rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
+                        <div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
                             Leaks show that OpenAI will be unveiling major updates to ChatGPT at its developer conference on 6 November. These include custom chatbots.
                         </div>
                     </div>
