--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span class="">Heystack</span>
       </a>
       <ul class="navbar-nav d-flex flex-row nav-main">
-        <li class="nav-item"> <a class="nav-link" href="/index.html">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
