--- a/blog.html
+++ b/blog.html
@@ -32,11 +32,11 @@
             <span class="">Heystack</span>
           </a>
           <ul class="navbar-nav d-flex flex-row nav-main">
-            <li class="nav-item"> <a class="nav-link" href="/index.html">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#customers">Customers</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#products">Prouducts</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#technology">Technology</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="./index.html#retailers">Retailers</a> </li>
             <li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
           </ul>
           <div class="nav-btn-container">
