feat:minimize returns

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="#" class="learn-btn">
+              <a href="./minimize_returns.html" class="learn-btn">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -268,7 +268,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="#" class="learn-btn">
+              <a href="./minimize_returns.html" class="learn-btn">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -285,7 +285,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="#" class="learn-btn">
+              <a href="./minimize_returns.html" class="learn-btn">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -310,7 +310,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="#" class="learn-btn">
+              <a href="./minimize_returns.html" class="learn-btn">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -327,7 +327,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="#" class="learn-btn">
+              <a href="./minimize_returns.html" class="learn-btn">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
