style:change gradient

--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -69,24 +69,21 @@
             </div>
         </div>
     </div>
-    <div class="top-gradient-color"
-        style="background-image: linear-gradient(to bottom, #eaf0ff, rgba(234, 240, 255, 0));"></div>
+    <div class="top-gradient-color"></div>
     <div class="returns-main">
         <h1 class="returns-title">Minimize Returns</h1>
-        <div class="returns-image-container d-flex flex-column gap-8rem">
-            <div class="">
-                <div class="w-100 text-center">
-                    <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
-                        class="img-fluid rounded shadow">
-                </div>
-                <div class="w-100">
-                    <p class="fs-6">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                        scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                        scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
-                    </p>
-                </div>
+        <div class="returns-image-container">
+            <div class="w-100 text-center">
+                <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+                    class="img-fluid rounded shadow">
+            </div>
+            <div class="w-100">
+                <p class="fs-6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                    scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                    scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
+                </p>
             </div>
         </div>
         <div class="returns-text-container">
