--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./static/css/main.css" />
     <link rel="stylesheet" href="./static/css/navbar.css">
     <link rel="stylesheet" href="./static/css/minimize_returns.css">
@@ -79,10 +80,10 @@
             </div>
             <div class="w-100">
                 <p class="fs-6">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                    scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                    scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laudantium officia sequi vero,
+                    praesentium atque quidem culpa dignissimos dolorem consequuntur? Molestias, atque tenetur! Lorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Alias laudantium officia sequi vero, praesentium
+                    atque quidem culpa dignissimos dolorem consequuntur? Molestias, atque tenetur!
                 </p>
             </div>
         </div>
