--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hey-Stack</title>
+    <title>Content | Hey-Stack</title>
+    <link rel="icon" href="./assets/logo/logo.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/logo/logo.ico" type="image/png">
+    <link rel="apple-touch-icon" href="./assets/logo/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
