fix:live-demo link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             advantage.
           </p>
           <div class="demo-btn text-center mt-4">
-            <a class="fw-bold" href="/sharadkraj/heystack-demo">LIVE DEMO</a>
+            <a class="fw-bold" href="https://calendly.com/sharadkraj/heystack-demo">LIVE DEMO</a>
           </div>
         </div>
         <div class="main-image w-100">
