--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@
 <body class="position-relative">
 	<div class="navbar top-0 start-0">
 		<div class="navbar-container">
-			<a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-				<img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+			<a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+				<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
 				<span class="">Heystack</span>
 			</a>
 			<ul class="navbar-nav d-flex flex-row nav-main">
@@ -54,7 +54,7 @@
 			<div class="modal-content">
 				<div class="modal-header d-flex justify-content-between">
 					<a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-						<img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+						<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
 						<span class="">Heystack</span>
 					</a>
 					<div class="close-btn modal-close">
@@ -346,7 +346,7 @@
 		<div class="footer-container padding-80">
 			<div class="d-flex flex-column gap-3 font-14">
 				<div class="logo d-flex align-items-center gap-2">
-					<img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+					<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
 					<div>
 						<span class="font-20">Heystack</span>
 					</div>
