--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <body class="position-relative">
   <div class="navbar top-0 start-0">
     <div class="navbar-container">
-      <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-        <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+      <a href="./index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+        <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
         <span class="">Heystack</span>
       </a>
       <ul class="navbar-nav d-flex flex-row nav-main">
@@ -53,7 +53,7 @@
       <div class="modal-content">
         <div class="modal-header d-flex justify-content-between">
           <a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-            <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+            <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
             <span class="">Heystack</span>
           </a>
           <div class="close-btn modal-close">
@@ -94,7 +94,7 @@
             advantage.
           </p>
           <div class="demo-btn text-center mt-4">
-            <a class="fw-bold" href="https://calendly.com/sharadkraj/heystack-demo">LIVE DEMO</a>
+            <a class="fw-bold" href="https://calendly.com/sharadkraj/heystack-demo" target="_blank">LIVE DEMO</a>
           </div>
         </div>
         <div class="main-image w-100">
@@ -245,8 +245,8 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="./minimize_returns.html" class="learn-btn">
-                <img width="200" src="./assets/products/learn-btn.svg" alt="">
+              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="" >
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -270,8 +270,8 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="./minimize_returns.html" class="learn-btn">
-                <img width="200" src="./assets/products/learn-btn.svg" alt="">
+              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="" >
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -287,8 +287,8 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="./minimize_returns.html" class="learn-btn">
-                <img width="200" src="./assets/products/learn-btn.svg" alt="">
+              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="" >
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -312,8 +312,8 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="./minimize_returns.html" class="learn-btn">
-                <img width="200" src="./assets/products/learn-btn.svg" alt="">
+              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="" >
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -329,8 +329,8 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a href="./minimize_returns.html" class="learn-btn">
-                <img width="200" src="./assets/products/learn-btn.svg" alt="">
+              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="" >
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -591,7 +591,7 @@
     <div class="footer-container padding-80">
       <div class="d-flex flex-column gap-3 font-14">
         <div class="logo d-flex align-items-center gap-2">
-          <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+          <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
           <div>
             <span class="font-20">Heystack</span>
           </div>
@@ -602,7 +602,7 @@
         </a>
         <div class="contact-info mb-4">
           <p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
-          <p class="m-0"><a href="contact@hey-stack.com">Email: contact@hey-stack.com</a></p>
+          <p class="m-0"><a href="mailto: contact@hey-stack.com">Email: contact@hey-stack.com</a></p>
         </div>
       </div>
       <div class="d-flex flex-wrap gap-5rem">
@@ -618,9 +618,9 @@
           <div class="footer-links">
             <p class="fw-bold">Resourse</p>
             <a class="mt-0 mb-0" href="./blog.html">Blogs</a>
-            <a class="mt-3 mb-0" href="#career">Career</a>
-            <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
-            <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
+            <a class="mt-3 mb-0" href="./career">Career</a>
+            <a class="mt-3 mb-0" href="./team-conditions">Teams of Service</a>
+            <a class="mt-3 mb-0" href="./privacy-policy">Privacy Policy</a>
           </div>
         </div>
         <div class="d-flex flex-wrap gap-5rem">
