--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </div>
     </div>
   </div>
-  <div class="testimonials">
+  <div class="testimonials" id="testimonials">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
       <p class="title-gradient m-0">
         Testimonials
