--- a/blog.html
+++ b/blog.html
@@ -34,12 +34,12 @@
 				<span class="">Heystack</span>
 			</a>
 			<ul class="navbar-nav d-flex flex-row nav-main">
-				<li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="index.html#customers">Customers</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="index.html#products">Prouducts</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="index.html#technology">Technology</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="index.html#retailers">Retailers</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="blog.html">Blogs</a> </li>
 			</ul>
 			<div class="nav-btn-container">
 				<button class="nav-btn">SEE LIVE IN ACTION</button>
@@ -53,7 +53,7 @@
 		<div class="modal">
 			<div class="modal-content">
 				<div class="modal-header d-flex justify-content-between">
-					<a href="/index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+					<a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
 						<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
 						<span class="">Heystack</span>
 					</a>
@@ -63,12 +63,12 @@
 				</div>
 				<div class="padding-24 paddingx-20">
 					<ul class="modal-nav">
-						<li class=""><a href="./index.html">Home</a></li>
-						<li class=""><a href="#customers">Customers</a></li>
-						<li class=""><a href="#products">Products</a></li>
-						<li class=""><a href="#technology">Technology</a></li>
-						<li class=""><a href="#retailers">Retailers</a></li>
-						<li class=""><a href="./blog.html">Blogs</a></li>
+						<li class=""><a href="index.html">Home</a></li>
+						<li class=""><a href="index.html#customers">Customers</a></li>
+						<li class=""><a href="index.html#products">Products</a></li>
+						<li class=""><a href="index.html#technology">Technology</a></li>
+						<li class=""><a href="index.html#retailers">Retailers</a></li>
+						<li class=""><a href="blog.html">Blogs</a></li>
 					</ul>
 					<div class="modal-nav-btn-container">
 						<button class="modal-nav-btn">SEE LIVE IN ACTION</button>
@@ -364,15 +364,15 @@
 				<div class="d-flex flex-wrap gap-5rem">
 					<div class="footer-links">
 						<p class="fw-bold">Home</p>
-						<a class="mt-0 mb-0" href="#customers">Customers</a>
-						<a class="mt-3 mb-0" href="#products">Products</a>
-						<a class="mt-3 mb-0" href="#testimonials">Testimonials</a>
-						<a class="mt-3 mb-0" href="#technoloy">Features</a>
-						<a class="mt-3 mb-0" href="#retailers">Retail Partners</a>
+						<a class="mt-0 mb-0" href="index.html#customers">Customers</a>
+						<a class="mt-3 mb-0" href="index.html#products">Products</a>
+						<a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
+						<a class="mt-3 mb-0" href="index.html#technology">Features</a>
+						<a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
 					</div>
 					<div class="footer-links">
 						<p class="fw-bold">Resourse</p>
-						<a class="mt-0 mb-0" href="./blog.html">Blogs</a>
+						<a class="mt-0 mb-0" href="blog.html">Blogs</a>
 						<a class="mt-3 mb-0" href="#career">Career</a>
 						<a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
 						<a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
