--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -29,10 +29,10 @@
             </a>
             <ul class="navbar-nav d-flex flex-row nav-main">
                 <li class="nav-item"> <a class="nav-link" href="./index.html">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#customers">Customers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#customers">Customers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#products">Prouducts</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#technology">Technology</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#retailers">Retailers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
             </ul>
             <div class="nav-btn-container">
@@ -146,18 +146,18 @@
                 <div class="d-flex flex-wrap gap-5rem">
                     <div class="footer-links">
                         <p class="fw-bold">Home</p>
-                        <a class="mt-0 mb-0" href="#customers">Customers</a>
-                        <a class="mt-3 mb-0" href="#products">Products</a>
-                        <a class="mt-3 mb-0" href="#testimonials">Testimonials</a>
-                        <a class="mt-3 mb-0" href="#technoloy">Features</a>
-                        <a class="mt-3 mb-0" href="#retailers">Retail Partners</a>
+                        <a class="mt-0 mb-0" href="index.html#customers">Customers</a>
+                        <a class="mt-3 mb-0" href="index.html#products">Products</a>
+                        <a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
+                        <a class="mt-3 mb-0" href="index.html#technology">Features</a>
+                        <a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
                     </div>
                     <div class="footer-links">
                         <p class="fw-bold">Resourse</p>
                         <a class="mt-0 mb-0" href="./blog.html">Blogs</a>
-                        <a class="mt-3 mb-0" href="#career">Career</a>
-                        <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
-                        <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
+                        <a class="mt-3 mb-0" href="career">Career</a>
+                        <a class="mt-3 mb-0" href="team-conditions">Teams of Service</a>
+                        <a class="mt-3 mb-0" href="privacy-policy">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="d-flex flex-wrap gap-5rem">
