feat:copyright link

--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -173,7 +173,7 @@
 				</div>
 			</div>
 		</div>
-		<p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="">Heystack™</a>. All Rights
+		<p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="https://hey-stack.com">Heystack™</a>. All Rights
 			Reserved.</p>
 	</div>
     <button id="backToTopBtn" class="back-to-top-btn">
