--- a/index.html
+++ b/index.html
@@ -440,11 +440,6 @@
               stroke-linejoin="round" />
           </svg>
         </button>
-
-
-        <!-- <div class="swiper-button-next swiper-navBtn"></div> -->
-        <!-- <div class="swiper-button-prev swiper-navBtn"></div> -->
-        <!-- <div class="swiper-pagination"></div> -->
       </div>
     </div>
   </div>
@@ -637,7 +632,7 @@
         </div>
       </div>
     </div>
-    <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="">Heystack™</a>. All Rights
+    <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="https://hey-stack.com">Heystack™</a>. All Rights
       Reserved.</p>
   </div>
   <button id="backToTopBtn" class="back-to-top-btn">
