style:image to black and white

--- a/index.html
+++ b/index.html
@@ -497,82 +497,82 @@
         <div class="card-wrapper swiper-wrapper" style=" display: flex; flex-direction: row;">
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/target.svg" alt="">
+              <img src="./assets/retailers/target.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/zappos.svg" alt="">
-            </div>
-          </div>
-          <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="retiler-card">
-              <img src="./assets/retailers/bestbuy.svg" alt="">
-            </div>
-            <div class="retiler-card">
-              <img src="./assets/retailers/homedepot.svg" alt="">
+              <img src="./assets/retailers/zappos.svg" alt="" class="bw-image">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/lowes.svg" alt="">
+              <img src="./assets/retailers/bestbuy.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/wayfire.svg" alt="">
-            </div>
-          </div>
-          <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="retiler-card">
-              <img src="./assets/retailers/chewy.svg" alt="">
-            </div>
-            <div class="retiler-card">
-              <img src="./assets/retailers/petco.svg" alt="">
+              <img src="./assets/retailers/homedepot.svg" alt="" class="bw-image">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/restmart.svg" alt="">
+              <img src="./assets/retailers/lowes.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/sephora.svg" alt="">
-            </div>
-          </div>
-          <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="retiler-card">
-              <img src="./assets/retailers/ulta.svg" alt="">
-            </div>
-            <div class="retiler-card">
-              <img src="./assets/retailers/chewy.svg" alt="">
+              <img src="./assets/retailers/wayfire.svg" alt="" class="bw-image">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/macys.svg" alt="">
+              <img src="./assets/retailers/chewy.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/nordstrom.svg" alt="">
-            </div>
-          </div>
-          <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="retiler-card">
-              <img src="./assets/retailers/kohls.svg" alt="">
-            </div>
-            <div class="retiler-card">
-              <img src="./assets/retailers/dicks.svg" alt="">
+              <img src="./assets/retailers/petco.svg" alt="" class="bw-image">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/acehardware.svg" alt="">
+              <img src="./assets/retailers/restmart.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/tractorsupply.svg" alt="">
+              <img src="./assets/retailers/sephora.svg" alt="" class="bw-image">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="retiler-card">
-              <img src="./assets/retailers/academy.svg" alt="">
+              <img src="./assets/retailers/ulta.svg" alt="" class="bw-image">
             </div>
             <div class="retiler-card">
-              <img src="./assets/retailers/dsw.svg" alt="">
+              <img src="./assets/retailers/costco.svg" alt="" class="bw-image">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide">
+            <div class="retiler-card">
+              <img src="./assets/retailers/macys.svg" alt="" class="bw-image">
+            </div>
+            <div class="retiler-card">
+              <img src="./assets/retailers/nordstrom.svg" alt="" class="bw-image">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide">
+            <div class="retiler-card">
+              <img src="./assets/retailers/kohls.svg" alt="" class="bw-image">
+            </div>
+            <div class="retiler-card">
+              <img src="./assets/retailers/dicks.svg" alt="" class="bw-image">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide">
+            <div class="retiler-card">
+              <img src="./assets/retailers/acehardware.svg" alt="" class="bw-image">
+            </div>
+            <div class="retiler-card">
+              <img src="./assets/retailers/tractorsupply.svg" alt="" class="bw-image">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide">
+            <div class="retiler-card">
+              <img src="./assets/retailers/academy.svg" alt="" class="bw-image">
+            </div>
+            <div class="retiler-card">
+              <img src="./assets/retailers/dsw.svg" alt="" class="bw-image">
             </div>
           </div>
         </div>
