--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
   <div class="home position-relative" id="home">
     <div class="semicircle position-absolute bottom-0 start-0">
-      <img src="./assets/generative/semicircle.webp" alt="" />
+      <img src="./assets/generative/semicircle.png" alt="" />
     </div>
     <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100">
@@ -251,7 +251,7 @@
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
@@ -259,7 +259,7 @@
         <div class="d-flex flex-column gap-8rem">
           <div class="screen-max-768 gap-4rem">
             <div class="w-100 text-center">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                 class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -293,7 +293,7 @@
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
@@ -301,7 +301,7 @@
         <div class="d-flex flex-column gap-8rem">
           <div class="screen-max-768 gap-4rem">
             <div class="w-100 text-center">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                 class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -335,7 +335,7 @@
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
@@ -593,7 +593,7 @@
         </div>
         <p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
         <a href="https://www.linkedin.com/company/hey-stack/">
-          <img class="linkedin" src="./assets/footer/linkedin.webp" alt="">
+          <img class="linkedin" src="./assets/footer/linkedin.ico" alt="">
         </a>
         <div class="contact-info mb-4">
           <p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
@@ -628,7 +628,7 @@
           </div>
         </div>
         <div class="location d-flex p-2 rounded-3">
-          <img class="w-100" src="./assets/footer/location.webp" alt="">
+          <img class="w-100" src="./assets/footer/location.png" alt="">
         </div>
       </div>
     </div>
