--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -76,7 +76,7 @@
         <h1 class="returns-title">Minimize Returns</h1>
         <div class="returns-image-container">
             <div class="w-100 text-center">
-                <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
+                <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
                     class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -134,7 +134,7 @@
 				</div>
 				<p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
 				<a href="https://www.linkedin.com/company/hey-stack/">
-					<img class="linkedin" src="./assets/footer/linkedin.webp" alt="">
+					<img class="linkedin" src="./assets/footer/linkedin.ico" alt="">
 				</a>
 				<div class="contact-info mb-4">
 					<p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 				<div class="location d-flex p-2 rounded-3">
-					<img class="w-100" src="./assets/footer/location.webp" alt="">
+					<img class="w-100" src="./assets/footer/location.png" alt="">
 				</div>
 			</div>
 		</div>
