fix:split totopbtn js css

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <link rel="stylesheet" href="./static/css/retailers.css">
   <link rel="stylesheet" href="./static/css/arrowbtn.css">
   <link rel="stylesheet" href="./static/css/navbar.css">
-  <script defer src="./static/js/main.js"></script>
+  <link rel="stylesheet" href="./static/css/totopbtn.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./static/js/testimonials.js"></script>
   <script defer src="./static/js/retailers.js"></script>
   <script defer src="./static/js/navbar.js"></script>
+  <script defer src="./static/js/totopbtn.js"></script>
 </head>
 
 <body class="position-relative">
