--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,12 @@
 	<link rel="stylesheet" href="./static/css/testimonials.css">
 	<link rel="stylesheet" href="./static/css/partners.css">
 	<link rel="stylesheet" href="./static/css/navbar.css">
-	<script defer src="./static/js/main.js"></script>
+  <link rel="stylesheet" href="./static/css/totopbtn.css" />
 	<script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<script defer src="./static/js/testimonials.js"></script>
 	<script defer src="./static/js/partners.js"></script>
 	<script defer src="./static/js/navbar.js"></script>
+	<script defer src="./static/js/totopbtn.js"></script>
 </head>
 
 <body class="position-relative">
