--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -15,62 +15,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./static/css/main.css" />
     <link rel="stylesheet" href="./static/css/navbar.css">
+    <link rel="stylesheet" href="./static/css/totopbtn.css" />
     <link rel="stylesheet" href="./static/css/minimize_returns.css">
-    <script defer src="./static/js/main.js"></script>
     <script defer src="./static/js/navbar.js"></script>
+    <script defer src="./static/js/totopbtn.js"></script>
 </head>
 
 <body class="position-relative">
-	<div class="navbar top-0 start-0">
-		<div class="navbar-container">
-			<a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-				<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
-				<span class="">Heystack</span>
-			</a>
-			<ul class="navbar-nav d-flex flex-row nav-main">
-				<li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="index.html#customers">Customers</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="index.html#products">Prouducts</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="index.html#technology">Technology</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="index.html#retailers">Retailers</a> </li>
-				<li class="nav-item"> <a class="nav-link" href="blog.html">Blogs</a> </li>
-			</ul>
-			<div class="nav-btn-container">
-				<button class="nav-btn">SEE LIVE IN ACTION</button>
-			</div>
-			<button class="navbar-toggle">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
-		<div class="modal">
-			<div class="modal-content">
-				<div class="modal-header d-flex justify-content-between">
-					<a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-						<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
-						<span class="">Heystack</span>
-					</a>
-					<div class="close-btn modal-close">
-						<span class="" style="color: rgb(143, 143, 143);"><img src="./assets/logo/close.svg" alt=""></span>
-					</div>
-				</div>
-				<div class="padding-24 paddingx-20">
-					<ul class="modal-nav">
-						<li class=""><a href="index.html">Home</a></li>
-						<li class=""><a href="index.html#customers">Customers</a></li>
-						<li class=""><a href="index.html#products">Products</a></li>
-						<li class=""><a href="index.html#technology">Technology</a></li>
-						<li class=""><a href="index.html#retailers">Retailers</a></li>
-						<li class=""><a href="blog.html">Blogs</a></li>
-					</ul>
-					<div class="modal-nav-btn-container">
-						<button class="modal-nav-btn">SEE LIVE IN ACTION</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="navbar top-0 start-0">
+        <div class="navbar-container">
+            <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+                <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                <span class="">Heystack</span>
+            </a>
+            <ul class="navbar-nav d-flex flex-row nav-main">
+                <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#customers">Customers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#products">Prouducts</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#technology">Technology</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="index.html#retailers">Retailers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="blog.html">Blogs</a> </li>
+            </ul>
+            <div class="nav-btn-container">
+                <button class="nav-btn">SEE LIVE IN ACTION</button>
+            </div>
+            <button class="navbar-toggle">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="modal">
+            <div class="modal-content">
+                <div class="modal-header d-flex justify-content-between">
+                    <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+                        <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                        <span class="">Heystack</span>
+                    </a>
+                    <div class="close-btn modal-close">
+                        <span class="" style="color: rgb(143, 143, 143);"><img src="./assets/logo/close.svg"
+                                alt=""></span>
+                    </div>
+                </div>
+                <div class="padding-24 paddingx-20">
+                    <ul class="modal-nav">
+                        <li class=""><a href="index.html">Home</a></li>
+                        <li class=""><a href="index.html#customers">Customers</a></li>
+                        <li class=""><a href="index.html#products">Products</a></li>
+                        <li class=""><a href="index.html#technology">Technology</a></li>
+                        <li class=""><a href="index.html#retailers">Retailers</a></li>
+                        <li class=""><a href="blog.html">Blogs</a></li>
+                    </ul>
+                    <div class="modal-nav-btn-container">
+                        <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="top-gradient-color"></div>
     <div class="returns-main">
         <h1 class="returns-title">Minimize Returns</h1>
@@ -123,59 +125,60 @@
                 doloremque quaerat. Eligendi veritatis beatae sequi rerum!</p>
         </div>
     </div>
-	<div class="margintop-112 padding-24 ">
-		<div class="footer-container padding-80">
-			<div class="d-flex flex-column gap-3 font-14">
-				<div class="logo d-flex align-items-center gap-2">
-					<img class="logo-img" src="./assets/logo/logo.ico" alt="" />
-					<div>
-						<span class="font-20">Heystack</span>
-					</div>
-				</div>
-				<p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
-				<a href="https://www.linkedin.com/company/hey-stack/">
-					<img class="linkedin" src="./assets/footer/linkedin.ico" alt="">
-				</a>
-				<div class="contact-info mb-4">
-					<p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
-					<p class="m-0"><a href="contact@hey-stack.com">Email: contact@hey-stack.com</a></p>
-				</div>
-			</div>
-			<div class="d-flex flex-wrap gap-5rem">
-				<div class="d-flex flex-wrap gap-5rem">
-					<div class="footer-links">
-						<p class="fw-bold">Home</p>
-						<a class="mt-0 mb-0" href="index.html#customers">Customers</a>
-						<a class="mt-3 mb-0" href="index.html#products">Products</a>
-						<a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
-						<a class="mt-3 mb-0" href="index.html#technology">Features</a>
-						<a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
-					</div>
-					<div class="footer-links">
-						<p class="fw-bold">Resourse</p>
-						<a class="mt-0 mb-0" href="blog.html">Blogs</a>
-						<a class="mt-3 mb-0" href="#career">Career</a>
-						<a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
-						<a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
-					</div>
-				</div>
-				<div class="d-flex flex-wrap gap-5rem">
-					<div>
-						<p class="fw-bold">Our Office</p>
-						<p class="mt-0 mb-0">Sunnyvale, CA</p>
-						<p class="mt-3 mb-0">Boston, MA</p>
-						<p class="mt-3 mb-0">Bangalore, India</p>
-						<p class="mt-3 mb-0">Pune, India</p>
-					</div>
-				</div>
-				<div class="location d-flex p-2 rounded-3">
-					<img class="w-100" src="./assets/footer/location.png" alt="">
-				</div>
-			</div>
-		</div>
-		<p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="https://hey-stack.com">Heystack™</a>. All Rights
-			Reserved.</p>
-	</div>
+    <div class="margintop-112 padding-24 ">
+        <div class="footer-container padding-80">
+            <div class="d-flex flex-column gap-3 font-14">
+                <div class="logo d-flex align-items-center gap-2">
+                    <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                    <div>
+                        <span class="font-20">Heystack</span>
+                    </div>
+                </div>
+                <p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
+                <a href="https://www.linkedin.com/company/hey-stack/">
+                    <img class="linkedin" src="./assets/footer/linkedin.ico" alt="">
+                </a>
+                <div class="contact-info mb-4">
+                    <p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
+                    <p class="m-0"><a href="contact@hey-stack.com">Email: contact@hey-stack.com</a></p>
+                </div>
+            </div>
+            <div class="d-flex flex-wrap gap-5rem">
+                <div class="d-flex flex-wrap gap-5rem">
+                    <div class="footer-links">
+                        <p class="fw-bold">Home</p>
+                        <a class="mt-0 mb-0" href="index.html#customers">Customers</a>
+                        <a class="mt-3 mb-0" href="index.html#products">Products</a>
+                        <a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
+                        <a class="mt-3 mb-0" href="index.html#technology">Features</a>
+                        <a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
+                    </div>
+                    <div class="footer-links">
+                        <p class="fw-bold">Resourse</p>
+                        <a class="mt-0 mb-0" href="blog.html">Blogs</a>
+                        <a class="mt-3 mb-0" href="#career">Career</a>
+                        <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
+                        <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
+                    </div>
+                </div>
+                <div class="d-flex flex-wrap gap-5rem">
+                    <div>
+                        <p class="fw-bold">Our Office</p>
+                        <p class="mt-0 mb-0">Sunnyvale, CA</p>
+                        <p class="mt-3 mb-0">Boston, MA</p>
+                        <p class="mt-3 mb-0">Bangalore, India</p>
+                        <p class="mt-3 mb-0">Pune, India</p>
+                    </div>
+                </div>
+                <div class="location d-flex p-2 rounded-3">
+                    <img class="w-100" src="./assets/footer/location.png" alt="">
+                </div>
+            </div>
+        </div>
+        <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link"
+                href="https://hey-stack.com">Heystack™</a>. All Rights
+            Reserved.</p>
+    </div>
     <button id="backToTopBtn" class="back-to-top-btn">
         <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
         <p>Back to Top</p>
